[package]
name = "chip8"
version = "1.0.0"
authors = ["Deokhwan Kim"]
description = "chip8 is a CHIP-8 interpreter written in Rust with Rust-SDL2."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dkim/chip8"
keywords = ["chip-8", "chip8"]
categories = ["emulators"]
edition = "2018"

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
rand = "0.8.3"
sdl2 = "0.34.3"
snafu = { version = "0.6.10", features = ["backtraces"] }
spin_sleep = "1.1.1"
structopt = { version = "0.3.21", features = ["wrap_help"] }
strum = "0.24.1"
strum_macros = "0.20.1"

[features]
default = []
report_frame_rate = []
